# Akshar

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  RUN.md  docker-compose.yml  package.json  tsconfig.base.json
apps/agent/: README.md  pyproject.toml  requirements.txt
apps/agent/agents/: pipeline.py
apps/agent/api/: main.py  routes.py
apps/agent/core/: config.py  logging.py
apps/agent/schemas/: agent.py  common.py
apps/agent/services/: agent_service.py  context_service.py  embedding_service.py
apps/agent/tests/: test_api.py
apps/agent/workers/: tasks.py
apps/realtime/: package.json
apps/realtime/src/: index.ts
apps/realtime/src/modules/collaboration/: hocuspocusService.ts  presenceService.ts
apps/realtime/src/modules/document/: documentRepository.ts  postgresDocumentRepository.ts  snapshotService.ts
apps/realtime/src/modules/suggestions/: suggestionRepository.ts  suggestionService.ts
apps/realtime/src/plugins/: logger.ts
apps/realtime/src/routes/: agentRoutes.ts  healthRoutes.ts  presenceRoutes.ts  suggestionRoutes.ts
apps/realtime/src/services/: documentRepositoryFactory.ts  env.ts
apps/web/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  page.tsx
apps/web/src/modules/document/: BlockIdExtension.ts
apps/web/src/modules/editor/: CollaborativeEditor.tsx  useCollaborativeEditor.ts
apps/web/src/modules/suggestions/: SuggestionPanel.tsx  applySuggestionDiff.ts  types.ts
apps/web/src/services/: realtimeClient.ts
docs/architecture/: boundaries.md
