[project]
name = "akshar-agent"
version = "0.1.0"
description = "Akshar MVP agent service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.5.0",
  "fastapi>=0.115.11",
  "httpx>=0.28.1",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "python-dotenv>=1.0.1",
  "redis>=5.2.1",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "codectx>=0.1.3",
]
